--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,23 +2,18 @@
   text-align: center;
 }
 
-.map{
-  width: 50%;
-  height: 50%;
-  
-}
 
 .header {
   overflow: hidden;
-  background-color: #3cabb1   ;
+  background-color: #3ca797   ;
   padding: 20px 10px;
-  width: 99%;
+  width: 98.5%;
   border-radius: 9px;
 }
 
 .header a {
   float: left;
-  color:  #444444;
+  color:  black;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -33,6 +28,20 @@
 }
 
 
+.mapa{
+  width: 500px;
+  height: 300px;
+  padding: 15px;
+}
 
+.Login {
+  width: 400px;
+  height: 200px;
+  padding: 20px;
+}
 
+.Login form {
+  margin: 0 auto;
+  max-width: 320px;
+}
 
