se agrega todas las modificacion

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,14 +1,33 @@
+html {
+  background: #95a5a6;
+  background-image: url('./imagenDeFondo.jpeg');
+  background-size: auto 100% ;
+  min-height: 100%;
+  min-width: 100%;
+  }
+
+@media screen and (min-width: 900px) {
+  html {
+    background-size: 100% auto;
+  }
+}
+
+  
+body{
+ margin: 0px 0px 20px 0px; 
+}
 .App {
   text-align: center;
 }
 
-
 .header {
   overflow: hidden;
   background-color: #3ca797   ;
-  padding: 20px 10px;
-  width: 98.5%;
-  border-radius: 9px;
+  margin: 0% 0% 0% 0%;
+  padding: 20px 10px 10px 10px;
+  width: 100%;
+  border-end-start-radius: 20%;
+  border-end-end-radius: 20%;
 }
 
 .header a {
@@ -34,14 +53,4 @@
   padding: 15px;
 }
 
-.Login {
-  width: 400px;
-  height: 200px;
-  padding: 20px;
-}
-
-.Login form {
-  margin: 0 auto;
-  max-width: 320px;
-}
 
