--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,7 +24,7 @@ body{
   overflow: hidden;
   background-color: #3ca797   ;
   margin: 0% 0% 0% 0%;
-  padding: 20px 10px 10px 10px;
+  padding: 20px 0px 10px 0px;
   width: 100%;
   border-end-start-radius: 20%;
   border-end-end-radius: 20%;
@@ -34,18 +34,40 @@ body{
   float: left;
   color:  black;
   text-align: center;
-  padding: 12px;
+  margin: 0px 0px 10px 10px;
   text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
   border-radius: 4px;
 }
 
 .header a.logo {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
 }
 
+.header-right {
+  text-align: right;
+  
+}
+.header-logOut{
+  background:#2ecc71;
+  width:130px;
+  padding-top:5px;
+  padding-bottom:5px;
+  color:white;
+  border-radius:4px;
+  border: #27ae60 1px solid;
+  
+  float:right;
+  
+  margin-top:30px;
+  margin-bottom:20px;
+  margin-left:16px;
+  font-weight:800;
+  font-size:0.8em;
+  }
+.header-logOut:hover{
+  background:#2CC06B; 
+  }
 
 .mapa{
   width: 500px;
