--- a/src/css/Formulario.css
+++ b/src/css/Formulario.css
@@ -45,3 +45,10 @@
     border-radius:4px;
     }   
     
+.inputSubmit:disabled {   
+    background-color: gray;
+}
+
+.inputSubmit:disabled:hover {   
+    background-color: gray;
+}
